--- a/home.html
+++ b/home.html
@@ -101,13 +101,14 @@
 
 
                         <div class="main__content">
-                            <h1 class="vocal anim-typewriter">Photo</h1><br>
-                            <h2>Studio</h2>
-                            <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
+
+                            <h1 class="vocal anim-typewriter">Media</h1><br>
+                            <h2>Agency</h2>
+                            <p>We are your best plug for quality photography, event coverage, music production, videography and everything media.</p>
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
                         <div class="wave">
-                            <img id="main__img" src="images/4-removebg-preview.png" />
+                            <img id="main__img" src="images/artist-removebg-preview.png" />
                         </div>
                     </div>
 
@@ -123,7 +124,7 @@
                         <div class="main__content">
                             <h1 class="vocal anim-typewriter">Video</h1><br>
                             <h2>Production </h2>
-                            <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
+                            <p>The commendable media and entertainment agency that is committed to giving you value and satisfaction.</p>
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
                         <div class="wave">
@@ -147,7 +148,7 @@
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
                         <div class="wave">
-                            <img id="main__img" src="images/11_adobespark.png" />
+                            <img id="main__img" src="images/4-removebg-preview.png" />
                         </div>
                     </div>
 
@@ -317,7 +318,7 @@
                 Our Projects
             </h2>
 
-            <p>SOME OF OUR PROJECTS SO FAR</p>
+            <p>SOME OF OUR PROJECTS/WORKS SO FAR</p>
         </div>
 
         <div class="work-sample-grid">
@@ -337,7 +338,7 @@
                 </div>
 
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/16.jpg" alt="">
+                    <img src="./images/DSC_0107 (1).jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
                             <h4>INDOOR</h4>
@@ -346,7 +347,7 @@
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/4Z9A4265.jpg" alt="">
+                    <img src="./images/4Z9A4060.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
                             <h4>OUTDOOR</h4>
@@ -376,7 +377,7 @@
                 </div>
 
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/2.jpg" alt="">
+                    <img src="./images/4Z9A3737.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
                             <h4>WEDDINGS/BIRTHDAYS</h4>
