--- a/contact_us/contact.html
+++ b/contact_us/contact.html
@@ -156,18 +156,20 @@
                         <!-- <a href="/">Investments</a>
             <a href="/">Terms of Service</a> -->
                     </div>
-                    <div class="footer__link--items">
+                    <!-- <div class="footer__link--items">
                         <h2></h2>
-                        <a href="/">Team</a> <a href="/">Who We Are</a>
+                        <a href="/">Team</a>
+                        <a href="/">Who We Are</a>
                         <a href="/">How We Work</a>
-                        <!-- <a href="/">Sponsorships</a> -->
-                    </div>
+                        <a href="/">Sponsorships</a>
+                </div> -->
 
                     <div class="footer__link--wrapper">
                         <div class="footer__link--items">
                             <h2></h2>
-                            <a href="/">Portfolio</a> <a href="/">Management</a>
-                            <a href="/">Agency</a>
+                            <a href="/">Portfolio</a>
+                            <a href="/">Management</a>
+                            <a href="/">Bookings</a>
                             <!--  <a href="/">Influencer</a> -->
                         </div>
 
