--- a/home.html
+++ b/home.html
@@ -188,13 +188,11 @@
                         <div class="box-serve1 js-scroll slide-down">
 
                             <div class="content-serve">
-                                <h2>01</h2>
+                                <h2></h2>
                                 <h3>Videography</h3>
-                                <p>
-                                    Want to record voice over for a film, a commercial, audio book or podcast?<br> We’ve done all of the above, including trailers for Nollywood films and political campaigns.<br> CYCLERS STUDIO has enough room for recording
-                                    vocals, and it’s also perfect for voice-over recordings.
-                                </p>
-                                <a href="#">Read More</a>
+                                <p>You want to organise a movie shoot, video for your music, <br>Ads for your business to reach more audience, content for your YouTube channel or a presentation, there's no need to search further; <br>Cyclers studio is the
+                                    foremost media agency you can rely on for everything video.</p>
+                                <a href="#">BOOK NOW</a>
 
                             </div>
                         </div>
@@ -203,14 +201,14 @@
                     <div class="box-serve">
                         <div class="box-serve2 js-scroll slide-down">
                             <div class="content-serve">
-                                <h2>02</h2>
+                                <h2></h2>
                                 <h3>Photography</h3>
                                 <p>
 
                                     Want to record voice over for a film, a commercial, audio book or podcast?<br> We’ve done all of the above, including trailers for Nollywood films and political campaigns.<br> CYCLERS STUDIO has enough room for recording
                                     vocals, and it’s also perfect for voice-over recordings.
                                 </p>
-                                <a href="#">Read More</a>
+                                <a href="#">BOOK NOW</a>
                             </div>
                         </div>
                     </div>
@@ -233,7 +231,7 @@
                         <div class="live-equipment">
 
                             <div class="live-equipment-description js-scroll slide-down">
-                                <h1>Live Instruments</h1>
+                                <h1>Quality and standard equipment</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
@@ -241,7 +239,7 @@
                         <div class="what-we-have professional-equipment js-scroll slide-down">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description ">
-                                <h1>Live Ins</h1>
+                                <h1>Experienced professionals</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
@@ -253,7 +251,7 @@
                         <div class="live-equipment">
 
                             <div class="live-equipment-description js-scroll slide-down">
-                                <h1>Live Instruments</h1>
+                                <h1>Conducive environment</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
@@ -273,7 +271,7 @@
                         <div class="what-we-have professional-equipment js-scroll slide-down">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description ">
-                                <h1>Live Ins</h1>
+                                <h1>Irresistible terms and conditions</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
@@ -285,7 +283,7 @@
                         <div class="live-equipment">
 
                             <div class="live-equipment-description js-scroll slide-down">
-                                <h1>Live Instruments</h1>
+                                <h1>Customer Satisfaction Guarantee</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
@@ -293,7 +291,7 @@
                         <div class="what-we-have professional-equipment js-scroll slide-down">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description ">
-                                <h1>Live Ins</h1>
+                                <h1>Value overload</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
