--- a/contact_us/contact.html
+++ b/contact_us/contact.html
@@ -55,7 +55,7 @@
                 <li class="navbar__item">
                     <a href="#" class="navbar__links">Contact Us</a>
                 </li>
-                <li>
+                <li class="navbar__item">
 
                     <div class="login-container">
 
