--- a/contact_us/contact.html
+++ b/contact_us/contact.html
@@ -150,9 +150,9 @@
                     </div>
                     <div class="footer__link--items">
                         <h2></h2>
-                        <a href="/">Blog</a>
-                        <a href="/">Projects</a>
-                        <a href="/">Contacts</a>
+                        <a href="medium.com">Blog</a>
+                        <a href="../home.html">Projects</a>
+
                         <!-- <a href="/">Investments</a>
             <a href="/">Terms of Service</a> -->
                     </div>
@@ -167,9 +167,9 @@
                     <div class="footer__link--wrapper">
                         <div class="footer__link--items">
                             <h2></h2>
-                            <a href="/">Portfolio</a>
-                            <a href="/">Management</a>
-                            <a href="/">Bookings</a>
+                            <a href="../home.html">Portfolio</a>
+                            <a href="../home.html">Management</a>
+                            <a href="../form/form.html">Bookings</a>
                             <!--  <a href="/">Influencer</a> -->
                         </div>
 
