--- a/form/form.html
+++ b/form/form.html
@@ -29,7 +29,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="../home.html" id="navbar__logo"><img src="../images/cycler1-.png" alt="" srcset=""></i>
+            <a href="../index.html" id="navbar__logo"><img src="../images/cycler1-.png" alt="" srcset=""></i>
             </a>
             <div class="navbar__toggle" id="mobile-menu">
 
@@ -44,16 +44,16 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="../home.html" class="navbar__links">Home</a>
+                    <a href="../index.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../home.html" class="navbar__links">About Us</a>
+                    <a href="../index.html" class="navbar__links">About Us</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="../home.html" class="navbar__links">Services</a>
+                    <a href="../index.html" class="navbar__links">Services</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#" class="navbar__links">Contact Us</a>
+                    <a href="../contact_us/contact.html" class="navbar__links">Contact Us</a>
                 </li>
                 <li>
 
@@ -94,7 +94,7 @@
                 <div>
                     <label for="first_name">First Name</label>
                     <div class="field">
-                        <i class="fas fa-user"></i>
+                        <i class="fal fa-user"></i>
                         <input id="first_name" type="text" name="first_name" placeholder="First Name" required>
                     </div>
                 </div>
@@ -117,6 +117,11 @@
             <div class="field">
                 <i class="fas fa-phone"></i>
                 <input id="phone" type="tel" name="phone" placeholder="Your Phone Number" required>
+            </div>
+            <label for="message">Message</label>
+            <div class="field">
+                <textarea class="form-control" rows="" placeholder="I want a photoshoot for me and family...." name="message">
+                </textarea>
             </div>
             <!-- <div class="wrapper">
                 <div>
