--- a/index.html
+++ b/index.html
@@ -574,6 +574,33 @@
                 </div> -->
                     </div>
                 </div>
+                <div class="column blogBox moreBox hidden">
+                    <div class="team  js-scroll slide-down">
+                        <div class="team-img">
+                            <img src="/images/gil.jpeg" alt="Team Image">
+                        </div>
+                        <div class="team-content">
+                            <h2 style="font-size: 15px;">Gilgal Umia </h2>
+                            <h3>Content Creator </h3>
+                            <p style="font-size: 12px;">Multi-award winner with a rich blend of experience and expertise in content writing. I breathe content</p>
+                            <h4>
+                                <!-- Add font awesome icons -->
+                                <a href="https://instagram.com/gilgal_umia?utm_medium=copy_link" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/gilgal.umia" class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/GilgalUmia?t=LiNX-GLjLMKBDx9FFkiyVQ&s=09" class="fab fa-twitter"></a>
+                                <a href="mailto:gilgaleboh@gmail.com" class="fab fa-google"></a>
+                            </h4>
+                            </h4>
+                        </div>
+                        <!-- <div class="team-social">
+                    <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                </div> -->
+                    </div>
+                </div>
 
                 <div class="column blogBox moreBox hidden">
                     <div class="team  js-scroll slide-down">
