--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CYCLERS||STUDIOS</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="./scss/styless.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet" />
 
@@ -254,80 +254,85 @@
 
     <section class="works-and-clients" id="services">
 
-        <div class="works-and-clients-text  js-scroll slide-down">
-            <h2 class="work-and-client-header">
-                Our Projects
-            </h2>
+        <div class="workss">
 
-            <p>SOME OF OUR PROJECTS/WORKS SO FAR</p>
-        </div>
 
-        <div class="work-sample-grid">
-            <div class="grid-cointainer">
+            <div class="works-and-clients-text  js-scroll slide-down">
+                <h2 class="work-and-client-header">
+                    Our Projects
+                </h2>
 
-                <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/DSC_0166_1 (1).jpg" alt="">
-                    <div class="img-text">
-                        <div class="cont">
-                            <h4>Head Shot</h4>
-                            <a href="./video production/video.html">
-                                <p></p>
-                            </a>
+                <p>SOME OF OUR PROJECTS/WORKS SO FAR</p>
+            </div>
 
+            <div class="work-sample-grid">
+                <div class="grid-cointainer">
+
+                    <div class="grid-item  js-scroll slide-down">
+                        <img src="./images/DSC_0166_1 (1).jpg" alt="">
+                        <div class="img-text">
+                            <div class="cont">
+                                <h4>Head Shot</h4>
+
+                                <p> <a href="./headshot/headshot.html">VIEW MORE</a></p>
+
+
+
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/DSC_0107 (1).jpg" alt="">
-                    <div class="img-text">
-                        <div class="cont">
-                            <h4>INDOOR</h4>
+                    <div class="grid-item  js-scroll slide-down">
+                        <img src="./images/DSC_0107 (1).jpg" alt="">
+                        <div class="img-text">
+                            <div class="cont">
+                                <h4>INDOOR</h4>
 
-                            <p>Photoshoot</p>
+                                <p>Photoshoot</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/4Z9A4060.jpg" alt="">
-                    <div class="img-text">
-                        <div class="cont">
-                            <h4>OUTDOOR</h4>
-                            <a href="./photoshoot/photo.html">
-                                <p>Photo Shoot</p>
-                            </a>
+                    <div class="grid-item  js-scroll slide-down">
+                        <img src="./images/4Z9A4060.jpg" alt="">
+                        <div class="img-text">
+                            <div class="cont">
+                                <h4>OUTDOOR</h4>
+                                <a href="./photoshoot/photo.html">
+                                    <p>Photo Shoot</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/1.jpeg" alt="">
-                    <div class="img-text">
-                        <div class="cont">
-                            <h4>AUDIO</h4>
-                            <p>Sound Mixing</p>
+                    <div class="grid-item  js-scroll slide-down">
+                        <img src="./images/1.jpeg" alt="">
+                        <div class="img-text">
+                            <div class="cont">
+                                <h4>AUDIO</h4>
+                                <p>Sound Mixing</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/cycler event artists.jpg" alt="">
-                    <div class="img-text">
-                        <div class="cont">
-                            <h4>CYCLERS CONCERT</h4>
-                            <p>Event Management</p>
+                    <div class="grid-item  js-scroll slide-down">
+                        <img src="./images/cycler event artists.jpg" alt="">
+                        <div class="img-text">
+                            <div class="cont">
+                                <h4>CYCLERS CONCERT</h4>
+                                <p>Event Management</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/4Z9A3737.jpg" alt="">
-                    <div class="img-text">
-                        <div class="cont">
-                            <h4>WEDDINGS/BIRTHDAYS</h4>
-                            <p>Event Management</p>
+                    <div class="grid-item  js-scroll slide-down">
+                        <img src="./images/4Z9A3737.jpg" alt="">
+                        <div class="img-text">
+                            <div class="cont">
+                                <h4>WEDDINGS/BIRTHDAYS</h4>
+                                <p>Event Management</p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
     </section>
@@ -640,69 +645,38 @@
     </section>
 
     <section>
-        <!-- <div class="slider">
-            <div class="slide-track">
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
-                </div>
-            </div>
-        </div> -->
+
     </section>
     <section>
+        <div class="slider-title">
+            <h1> Our Clients</h1>
+        </div>
+        <div class="slider">
 
-        <div class="contact-section" id="contact">
-
-            <div class="contact js-scroll slide-down" id="">
-                <div>
-                    <h5>SUBSCRIBE TO CYCLERS</h5>
-                    <p>
-                        For Latest News, Blog Posts, Concerts, Events
-                    </p>
+            <div class="slide-track">
+                <div class="slide">
+                    <img src="./images/cycler1-.png" height="100" width="163" alt="engraced" />
                 </div>
-                <div class="input-div">
-                    <input type="text" placeholder="enter email address..." />
-                    <div class="send-div">
-                        <a href="mailto:newsletter@cyclersstudio.com"><img src="./images/send.png" alt="send" /></a>
-                    </div>
+                <div class="slide">
+                    <img src="./images/az.png" height="100" width="163" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/cycler1-.png" height="163" width="163" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/az.png" height="100" width="163" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/cycler1-.png" height="163" width="163" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/az.png" height="100" width="163" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/cycler1-.png" height="163" width="163" alt="engraced" />
+                </div>
+                <div class="slide">
+                    <img src="./images/az.png" height="100" width="163" alt="engraced" />
                 </div>
             </div>
         </div>
