--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
 
     </section>
     <section class="sli">
-        <div class="slider-title">
+        <div class="section-title">
             <h1> Our Clients</h1>
         </div>
         <div class="slider">
