--- a/index.html
+++ b/index.html
@@ -853,32 +853,28 @@
                             <a href="#">Blog</a>
                         </div>
                         <div class="footer-link">
-                            <a href="#">Products</a>
+                            <a href="#">Projects</a>
                         </div>
                         <div class="footer-link">
                             <a href="#">Contact</a>
                         </div>
                     </div>
                     <div class="relate-with-us">
-                        <div class="footer-link">
+                        <!-- <div class="footer-link">
                             <a href="#">Team</a>
-                        </div>
-                        <div class="footer-link">
-                            <a href="#">Who We Are</a>
-                        </div>
-                        <div class="footer-link">
-                            <a href="#">How We Work</a>
-                        </div>
+                        </div> -->
+
+
                     </div>
                     <div class="proof-of-work">
                         <div class="footer-link">
-                            <a href="#">Portfolio</a>
+                            <a href="#">For Hire</a>
                         </div>
                         <div class="footer-link">
-                            <a href="#">Management</a>
+                            <a href="#">Outreach</a>
                         </div>
                         <div class="footer-link">
-                            <a href="#">Contacts</a>
+                            <a href="#">Events</a>
                         </div>
                     </div>
                     <div class="location">
