--- a/index.html
+++ b/index.html
@@ -860,21 +860,25 @@
                         </div>
                     </div>
                     <div class="relate-with-us">
-                        <!-- <div class="footer-link">
-                            <a href="#">Team</a>
-                        </div> -->
-
-
+                        <div class="footer-link">
+                            <a href="#">Career</a>
+                        </div>
+                        <div class="footer-link">
+                            <a href="#">About</a>
+                        </div>
+                        <div class="footer-link">
+                            <a href="#">FAQs</a>
+                        </div>
                     </div>
                     <div class="proof-of-work">
                         <div class="footer-link">
-                            <a href="#">For Hire</a>
+                            <a href="#">Portfolio</a>
                         </div>
                         <div class="footer-link">
-                            <a href="#">Outreach</a>
+                            <a href="#">Management</a>
                         </div>
                         <div class="footer-link">
-                            <a href="#">Events</a>
+                            <a href="#">Hires</a>
                         </div>
                     </div>
                     <div class="location">
